--- a/src/qt/forms/tradingdialog.ui
+++ b/src/qt/forms/tradingdialog.ui
@@ -445,7 +445,7 @@
       <string>Buy XSCR</string>
      </property>
      <property name="icon">
-      <iconset resource="../bitcoin.qrc">
+      <iconset resource="../XSCR.qrc">
        <normaloff>:/icons/bitcoin</normaloff>:/icons/bitcoin</iconset>
      </property>
     </widget>
@@ -1754,7 +1754,7 @@
       <string>Sell XSCR</string>
      </property>
      <property name="icon">
-      <iconset resource="../bitcoin.qrc">
+      <iconset resource="../XSCR">
        <normaloff>:/icons/bitcoin</normaloff>:/icons/bitcoin</iconset>
      </property>
     </widget>
@@ -2941,10 +2941,10 @@
       </rect>
      </property>
      <property name="text">
-      <string>Generate Securus Deposit Address</string>
+      <string>Generate XSCR Deposit Address</string>
      </property>
      <property name="icon">
-      <iconset resource="../bitcoin.qrc">
+      <iconset resource="../XSCR.qrc">
        <normaloff>:/icons/bitcoin</normaloff>:/icons/bitcoin</iconset>
      </property>
     </widget>
@@ -3155,7 +3155,7 @@
        <string notr="true">border: 1px solid #61696c;margin-left:4px;</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="btnConvertCoin">
+     <widget class="QPushButton" name="btnConvertXSCR">
       <property name="geometry">
        <rect>
         <x>260</x>
@@ -3206,7 +3206,7 @@
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap resource="../bitcoin.qrc">:/icons/transaction_1</pixmap>
+       <pixmap resource="../XSCR.qrc">:/icons/transaction_1</pixmap>
       </property>
       <property name="scaledContents">
        <bool>true</bool>
@@ -3253,7 +3253,7 @@
       <string>Update API Keys</string>
      </property>
      <property name="icon">
-      <iconset resource="../bitcoin.qrc">
+      <iconset resource="../XSCR.qrc">
        <normaloff>:/icons/bitcoin</normaloff>:/icons/bitcoin</iconset>
      </property>
     </widget>
@@ -3408,7 +3408,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="../bitcoin.qrc"/>
+  <include location="../XSCR.qrc"/>
  </resources>
  <connections/>
 </ui>
