--- a/src/qt/forms/blockexplorer.ui
+++ b/src/qt/forms/blockexplorer.ui
@@ -168,7 +168,7 @@
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
-  <include location="../bitcoin.qrc"/>
+  <include location="../XSCR.qrc"/>
  </resources>
  <connections/>
 </ui>
