--- a/src/qt/forms/multisigdialog.ui
+++ b/src/qt/forms/multisigdialog.ui
@@ -22,8 +22,11 @@
   <layout class="QVBoxLayout" name="verticalLayout_8">
    <item>
     <widget class="QTabWidget" name="multisigTabWidget">
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
+     </property>
      <property name="styleSheet">
-      <string notr="true">QScrollArea{border: 1px solid #5b4c7c;}</string>
+      <string notr="true"/>
      </property>
      <property name="currentIndex">
       <number>1</number>
@@ -96,10 +99,6 @@
            <property name="text">
             <string>&amp;Add Address / Key</string>
            </property>
-           <property name="icon">
-            <iconset resource="../bitcoin.qrc">
-             <normaloff>:/icons/add</normaloff>:/icons/add</iconset>
-           </property>
            <property name="autoDefault">
             <bool>false</bool>
            </property>
@@ -141,6 +140,9 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="styleSheet">
+          <string notr="true">border:0;</string>
+         </property>
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
@@ -149,8 +151,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>759</width>
-            <height>166</height>
+            <width>761</width>
+            <height>184</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -192,10 +194,6 @@
            </property>
            <property name="text">
             <string>C&amp;reate</string>
-           </property>
-           <property name="icon">
-            <iconset resource="../bitcoin.qrc">
-             <normaloff>:/icons/filesave</normaloff>:/icons/filesave</iconset>
            </property>
            <property name="autoDefault">
             <bool>false</bool>
@@ -266,10 +264,6 @@ Please be patient after clicking import.</string>
            </property>
            <property name="text">
             <string>&amp;Import Redeem</string>
-           </property>
-           <property name="icon">
-            <iconset resource="../bitcoin.qrc">
-             <normaloff>:/icons/receiving_addresses</normaloff>:/icons/receiving_addresses</iconset>
            </property>
           </widget>
          </item>
@@ -374,7 +368,7 @@ Please be patient after clicking import.</string>
                 <string>Add a Raw Input</string>
                </property>
                <property name="icon">
-                <iconset resource="../bitcoin.qrc">
+                <iconset resource="../XSCR.qrc">
                  <normaloff>:/css/default</normaloff>:/css/default</iconset>
                </property>
               </widget>
@@ -389,6 +383,12 @@ Please be patient after clicking import.</string>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
+             <property name="styleSheet">
+              <string notr="true">border:0;</string>
+             </property>
+             <property name="lineWidth">
+              <number>0</number>
+             </property>
              <property name="widgetResizable">
               <bool>true</bool>
              </property>
@@ -397,8 +397,8 @@ Please be patient after clicking import.</string>
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>747</width>
-                <height>131</height>
+                <width>749</width>
+                <height>141</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_7">
@@ -445,10 +445,6 @@ Please be patient after clicking import.</string>
                <property name="text">
                 <string>Add &amp;Destination</string>
                </property>
-               <property name="icon">
-                <iconset resource="../bitcoin.qrc">
-                 <normaloff>:/icons/add</normaloff>:/icons/add</iconset>
-               </property>
               </widget>
              </item>
              <item>
@@ -474,6 +470,9 @@ Please be patient after clicking import.</string>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
+             <property name="styleSheet">
+              <string notr="true">border:0;</string>
+             </property>
              <property name="widgetResizable">
               <bool>true</bool>
              </property>
@@ -482,8 +481,8 @@ Please be patient after clicking import.</string>
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>747</width>
-                <height>130</height>
+                <width>749</width>
+                <height>140</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_11">
@@ -528,10 +527,6 @@ Please be patient after clicking import.</string>
                </property>
                <property name="text">
                 <string>Cr&amp;eate</string>
-               </property>
-               <property name="icon">
-                <iconset resource="../bitcoin.qrc">
-                 <normaloff>:/icons/export</normaloff>:/icons/export</iconset>
                </property>
                <property name="autoDefault">
                 <bool>false</bool>
@@ -650,10 +645,6 @@ txScrollArea:{
                <property name="text">
                 <string>S&amp;ign</string>
                </property>
-               <property name="icon">
-                <iconset resource="../bitcoin.qrc">
-                 <normaloff>:/icons/edit</normaloff>:/icons/edit</iconset>
-               </property>
                <property name="autoDefault">
                 <bool>false</bool>
                </property>
@@ -682,10 +673,6 @@ txScrollArea:{
                <property name="text">
                 <string>Co&amp;mmit</string>
                </property>
-               <property name="icon">
-                <iconset resource="../bitcoin.qrc">
-                 <normaloff>:/icons/send</normaloff>:/icons/send</iconset>
-               </property>
                <property name="autoDefault">
                 <bool>true</bool>
                </property>
@@ -706,10 +693,6 @@ txScrollArea:{
                  </property>
                  <property name="text">
                   <string>Add Private &amp;Key</string>
-                 </property>
-                 <property name="icon">
-                  <iconset resource="../bitcoin.qrc">
-                   <normaloff>:/icons/add</normaloff>:/icons/add</iconset>
                  </property>
                 </widget>
                </item>
@@ -780,7 +763,7 @@ txScrollArea:{
                 <x>0</x>
                 <y>0</y>
                 <width>755</width>
-                <height>168</height>
+                <height>68</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_9">
@@ -795,7 +778,7 @@ txScrollArea:{
                  <property name="sizeHint" stdset="0">
                   <size>
                    <width>20</width>
-                   <height>20</height>
+                   <height>40</height>
                   </size>
                  </property>
                 </spacer>
@@ -808,6 +791,19 @@ txScrollArea:{
          </item>
         </layout>
        </item>
+       <item>
+        <spacer name="verticalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
       </layout>
      </widget>
     </widget>
@@ -815,7 +811,7 @@ txScrollArea:{
   </layout>
  </widget>
  <resources>
-  <include location="../bitcoin.qrc"/>
+  <include location="../XSCR.qrc"/>
  </resources>
  <connections/>
 </ui>
