--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -579,7 +579,7 @@ border-radius: 4px;
 
 QSlider::sub-page:horizontal {
 /* background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #5B4C86, stop: 1 #7b67a9); */
-background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #60b5e9, stop: 1 #96d6f6);
+background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #60b5e9, stop: 1 #790e00); //790e00 #96d6f6
 border: 1px solid #333;
 height: 10px;
 border-radius: 4px;
