--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -1,5 +1,5 @@
 /****************************************************************************************/
-/* Global color codes:                                                                  */
+/* Global color codes:d                                                                  */
 /* dark-purple:        #23409B                                                          */
 /* transparent-purple: #e7edef (for inactive backgrounds)                               */
 /*                                                                                      */
