--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -52,7 +52,7 @@ background-color:#fff;
 }
 
 QMenuBar::item {
-background-color:#f77b25;
+background-color:#fff;
 color:#333;
 }
 
@@ -74,7 +74,7 @@ color:#333;
 }
 
 QToolBar {
-background-color: qlineargradient(y1:0, y2: 1, stop: 0 #23409B, stop: 0.75 #23409B, stop: 0.99 #ffffff, stop: 1 #ffffff);
+background-color: qlineargradient(y1:0, y2: 1, stop: 0 #f77b25, stop: 0.75 #f77b25, stop: 0.99 #ffffff, stop: 1 #ffffff);
 border:0px solid #333;
 padding:1;
 margin:0;
