--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -92,7 +92,7 @@ border-top: 0px;
 min-height:2.5em;
 padding: 0em 0em;
 font-size: 11px;
-color:#aaa;
+color:#f77b25;
 width: 80px;
 height: 60px;
 }
@@ -122,7 +122,7 @@ background-color:#fff;
 }
 
 QProgressBar {
-color: #AAAAAA;
+color: #1a9c75; /* balken sync */
 border:0px solid grey;
 border-radius:5px;
 background-color:transparent;
@@ -143,7 +143,7 @@ padding-right:5px;
 }
 
 QTabWidget {
-background-color:#f2f2f2;
+background-color:#d81b1b;
 }
 
 QTabWidget::pane {
