--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -137,7 +137,7 @@ width: 20px;
 
 QLabel#progressBarLabel {
 background-color:transparent;
-color: #f77b25;
+color: #000;
 padding-left:5px;
 padding-right:5px;
 }
@@ -845,7 +845,7 @@ min-width:180px;
 }
 
 QDialog#RPCConsole QWidget#tab_peers QLabel#peerHeading { /* Peers Info Header */
-color:#23409B;
+color:#f77b25;
 }
 
 QDialog#RPCConsole QTableView#peerWidget::item { /* Peers Table Items */
@@ -1212,7 +1212,7 @@ QWidget .QFrame#frame_CombinedBalances .QLabel#label_5z { /* Combined Balance La
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 min-width:160px;
 background-color:transparent;
-color:#25f77d;
+color:#f77b25;
 font-weight:bold;
 font-size:14px;
 margin-right:5px;
@@ -1222,7 +1222,7 @@ padding-right:5px;
 QWidget .QFrame#frame_CombinedBalances .QLabel#labelBalanceTextz { /* Available XSCR Label */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 min-width:160px;
-color:#23409B;
+color:#2c1302;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1233,13 +1233,13 @@ QWidget .QFrame#frame_CombinedBalances .QLabel#labelBalancez { /* Available XSCR
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:26px;
 font-weight:normal;
-color:#23409B;
+color:#2c1302;
 }
 
 QWidget .QFrame#frame_CombinedBalances .QLabel#labelzBalanceTextz { /* Available zXSCR Label */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 min-width:160px;
-color:#23409B;
+color:#2c1302;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1250,14 +1250,14 @@ QWidget .QFrame#frame_CombinedBalances .QLabel#labelzBalancez { /* Available zXS
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
 font-weight:bold;
-color:#f77b25;
+color:#2c1302;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame_CombinedBalances .QLabel#labelTotalTextz { /* Available total Label */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 min-width:160px;
-color:#23409B;
+color:#2c1302;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1268,7 +1268,7 @@ QWidget .QFrame#frame_CombinedBalances .QLabel#labelTotalz { /* Available total 
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:26px;
 font-weight:normal;
-color:#23409B;
+color:#2c1302;
 }
 
 /**************************** RECENT TRANSACTIONS ***************************************/
