--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -961,7 +961,7 @@ background-color:#ffffff;
 
 QWidget .QFrame#frame_CombinedBalances { /* Lower left side */
 min-width:400px;
-background-color:#ffffff;
+background-color:#251803;
 }
 
 QWidget .QFrame#frame_RecentTransactions { /* Right side */
