--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -961,7 +961,7 @@ background-color:#ffffff;
 
 QWidget .QFrame#frame_CombinedBalances { /* Lower left side */
 min-width:400px;
-background-color:#251803;
+background-color:#ffffff;
 }
 
 QWidget .QFrame#frame_RecentTransactions { /* Right side */
@@ -1006,7 +1006,7 @@ margin-left:16px;
 QWidget .QFrame#frame_Balances .QLabel#labelBalanceText { /* Available Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 min-width:160px;
-color:#f77b25;
+color:#054d0e;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1017,7 +1017,7 @@ QWidget .QFrame#frame_Balances .QLabel#labelBalance { /* Available Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
 font-weight:bold;
-color:#f77b25;
+color:#054d0e;
 margin-left:0px;
 }
 
@@ -1054,7 +1054,7 @@ margin-left:16px;
 QWidget .QFrame#frame_Balances .QLabel#labelImmatureText { /* Immature Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 min-width:160px;
-color:#f77b25;
+color:#6e060e;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1065,7 +1065,7 @@ QWidget .QFrame#frame_Balances .QLabel#labelImmature { /* Immature Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
 font-weight:bold;
-color:#f77b25;
+color:#6e060e;
 margin-left:0px;
 }
 
@@ -1102,7 +1102,7 @@ margin-left:16px;
 QWidget .QFrame#frame_Balances .QLabel#labelLockedBalanceText { /* Available zXSCR Label */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 min-width:160px;
-color:#f77b25;
+color:#530e4a;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1113,7 +1113,7 @@ QWidget .QFrame#frame_Balances .QLabel#labelLockedBalance { /* Available zXSCR B
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
 font-weight:bold;
-color:#f77b25;
+color:#530e4a;
 margin-left:0px;
 }
 
